<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="txtFichasRestantes">Restantes</string>
    <string name="txtTiempo">Tiempo</string>
    <string name="txtSinImplementar">¡No implementado aún!</string>
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>
    <string name="txtDialogYes">Sí</string>
    <string name="txtDialogNo">No</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza movida solo puede saltar única una pieza.</string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefKeyNombreJugador">nombreJugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefKeyColorFicha">colorToken</string>
    <string name="prefDefaultColorFicha">orange_token</string>
    <string name="prefTituloColorFicha">Color de las fichas</string>
    <string name="prefTextoColorFicha">Elija el color de las fichas</string>
    <string name="prefKeyModoOscuro">darkMode</string>
    <string name="prefTituloModoOscuro">Modo noche</string>
    <string name="prefTextoModoOscuro">Active para ver la aplicación en modo noche</string>

    <!-- Diálogo Reiniciar -->
    <string name="txtDialogRestart">Reiniciar partida</string>
    <string name="txtDialogRestartDescription">¿Desea reiniciar la partida? Perderás tu avance</string>

    <!-- Guardar partida -->
    <string name="txtTitleSaveGame">Nombre de la partida:</string>
    <string name="txtSavedGameOK">Partida guardada con éxito.</string>
    <string name="txtSavedGameFalse">No se ha podido guardar la partida.</string>
    <string name="txtNoSavedGame">No hay ninguna partida guardada.</string>

    <!-- Recuperar partida -->
    <string name="txtDialogRestore">Recuperar partida</string>
    <string name="txtDialogRestoreOK">Partida recuperada con éxito</string>
    <string name="txtDialogRestoreDescription">¿Desea recuperar la partida guardada? Perderás tu avance</string>

    <!-- Borrar puntuaciones -->
    <string name="txtButtonBorrar">Borrar puntuaciones</string>
    <string name="txtDialogoBorrarTitulo">Borrar puntuaciones</string>
    <string name="txtDialogoBorrarPregunta">¿Estas seguro que deseas eliminar todas las puntuaciones?</string>


</resources>