<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefTituloCategoria1">
        <EditTextPreference
            android:key="nombreJugador"
            android:summary="@string/prefTextoNombreJugador"
            android:title="@string/prefTituloNombreJugador" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefTituloCategoria2">
        <ListPreference
            android:entries="@array/Color"
            android:entryValues="@array/ColorAlias"
            android:key="@string/prefKeyColorFicha"
            android:summary="@string/prefTextoColorFicha"
            android:title="@string/prefTituloColorFicha" />

        <SwitchPreference
            android:key="@string/prefKeyModoOscuro"
            android:summary="@string/prefTextoModoOscuro"
            android:title="@string/prefTituloModoOscuro" />

    </PreferenceCategory>
</PreferenceScreen>
